My Django Girls app, first commit

--- a/patrizia.github.io/index.html
+++ b/patrizia.github.io/index.html
@@ -9,5 +9,7 @@
   <body>
       <h1>Was ist Django Girls Bern</h1>
       <p>Django Girls Bern ist ein Workshop wo man Programmieren lernt. </p>
+       <img src="family.jpg"> </img>
   </body>
+
 </html>
